data/derived/comb/progs/unify/prog8544.ml.out
Characters 153-156:
  | Sine sin		    -> Printf.printf "sin(%s)" sin
                                             ^^^
Error: This expression has type expr but an expression was expected of type
         string
